--- a/solution-code/index.html
+++ b/solution-code/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <title>Instagram</title>
-  <link href="css/main.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <div class="page">
