--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <main>
+    <div class="blueBackground"></div>
+    <div class="main">
+      <div class="container">
+        <img src="images/phones.png">
+        <div>
+          <div class="logo">
+            <img src="images/brand.png">
+          </div>
+          <div class="mainContent">
+            <h2>Capture and Share</h2>
+            <h2>the World's Moments</h2>
+            <p>Instagram is a <span class="bold">fast</span>, <span class="bold">beautiful</span> and <span class="bold">fun</span> way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <img class="app" src="images/badge-android.png">
+            <img class="app" src="images/badge-iphone.png">
+          </div>
+        </div>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+      </div>
+      <div class="footer">
+          <ul>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Support</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Press</a></li>
+            <li><a href="#">API</a></li>
+            <li><a href="#">Jobs</a></li>
+            <li><a href="#">Privacy</a></li>
+            <li><a href="#">Terms</a></li>
+            <li class="copyright">&copy; 2014 Instagram</li>
+          </ul>
+        </div>
+    </div>
+  </main>
 </body>
 </html>
